# sb-voice-dev

./: .gitignore  Makefile  README.md  client.py  mkdocs.yml  playsound-1.3.0-py3-none-any.whl  pyproject.toml  web_socket_handler.py
sb_voice_dev/: client.py  web_socket_handler.py
sb_voice_dev/prompts/: conversation.py
sb_voice_dev/server/: api.py  app_state.py  common.py  config.py  conversation_service.py  deepgram_service.py  main.py  tts.py
sb_voice_dev/server/services/conversation/: conversation_service.py  llm.py
sb_voice_dev/server/services/llm/: llm_service.py
sb_voice_dev/server/services/stt/: deepgram_service.py
sb_voice_dev/server/services/tts/: tts.py
sb_voice_dev/tests/: test_multiple_clients.py
