[tool.poetry]
name = "sb_voice_dev"
version = "0.0.1"
description = "Stands up a server for voice-to-voice commmunication"
authors = ["Karan Chawla <fkarchaw@proton.me>"]
repository = "https://github.com/karanchawla/sb-voice-dev"
documentation = "https://karanchawla.github.io/sb-voice-dev/"
readme = "README.md"
packages = [
  {include = "sb_voice_dev"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pynput = "^1.7.7"
pyaudio = "^0.2.14"
playsound = {path = "playsound-1.3.0-py3-none-any.whl"}
pydub = "^0.25.1"
websockets = "^12.0"
modal = "^0.62.175"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.2"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = ['py39']
fast = true
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
    | \.tox
  ))
'''

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
exclude = [
    '\.venv',
    'tests'
]
